test/files/neg/t2208.check
t2208.scala:7: error: type arguments [Any] do not conform to type Alias's type parameter bounds [X <: Test.A]
	class C extends Alias[Any]   // not ok, normalisation should check bounds before expanding Alias
                        ^
<<<<<<< HEAD
one error found
=======
one error found
>>>>>>> 426c65030df3df0c3e038931b64199fc4e83c1a0
